Add remainder of content and initial images

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 <div class="header">
-  <img src="./resources/img-myt-logo.jpg" alt="MYT logo">
+  <img src="./resources/images/img-myt-logo.jpg" alt="MYT logo">
     <h3>MY Times</h3>
     <nav class="nav">
       <ul>
@@ -20,8 +20,10 @@
     </div>
     <div class="content">
       <div class="leftcolumn">
-          <div class="Mother leftcolumn">
+          <div class="mother leftcolumn">
+    <div class="mainstory">
     <p>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</p></div>
+  </div>
           <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
 <div class="Orca Story leftcolumn">
   <h3>Orca Spends Vacation at Land World Puget</h3>
@@ -52,7 +54,7 @@
       </div>
 <div class="rightcolumn">
 <div class="cookie rightcolumn">
-  <img src="./resources/img-news-bite.png" alt="chocolate chip cookie bite">
+  <img src="./resources/images/img-news-bite.png" alt="chocolate chip cookie bite">
 </div>
 <div class="Bites rightcolumn">
   <h4>NEWS BITES</h4>
