--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
       <div class="leftcolumn">
 
           <div class="mother">
-              <p class="mainstory">Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</p>
+              <div class="mainstory">
+              <p>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</p>
+              </div>
 
               <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
             </div>
-
-            <div class="Orca">
+          <div class="leftstories">
+            <div class="orca">
               <h3>Orca Spends Vacation at Land World Puget</h3>
               <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
             </div>
@@ -41,15 +43,15 @@
               <p>Earth Spins Backward for 2017</p>
             </div>
 
-            <div class="Burger">
+            <div class="burger">
               <h3>Burger for Breakfast: How Early is too Early?</h3>
               <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
             </div>
-
             <div class="research">
               <p>Research Shows Cameras Erase Memory</p>
             </div>
-      </div>
+          </div>
+    </div>
 
       <div class="middlecolumn">
 
@@ -76,5 +78,6 @@
           <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p>
         </div>
     </div>
+  </div>
   </body>
 </html>
