Add remainder of CSS styling

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
         </div>
 
-        <div class="Cats middlecolumn">
+        <div class="cats">
           <p>Cats in Control-Is It a Thing?</p>
         </div>
 
@@ -70,12 +70,22 @@
       </div>
 
       <div class="rightcolumn">
-<div class="cookie rightcolumn">
-  <img src="./resources/images/img-news-bite.png" alt="chocolate chip cookie bite">
-</div>
-        <div class="Bites rightcolumn">
+        <div class="rightstyle">
+        <div class="cookie">
+        </div>
+        <div class="bites">
           <h4>NEWS BITES</h4>
-          <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p>
+        </div>
+        <div class="newsbitelist">
+        <ul>
+          <li>Cat Emoji Goes Viral</li>
+          <li>Buy Youtube Views</li>
+          <li>Home Business Advertising Ideas</li>
+          <li>Advertising Internet Online</li>
+          <li>Illustration in Marketing Materials</li>
+          <li>Finally a Top Secret Way You Can</li>
+        </ul>
+        </div>
         </div>
     </div>
   </div>
