Add these last extremely annoying changes

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       <div class="rightcolumn">
         <div class="rightstyle">
         <div class="cookie">
+          <img src="./resources/images/img-news-bite.png") alt="cookie">
         </div>
         <div class="bites">
           <h4>NEWS BITES</h4>
@@ -88,6 +89,15 @@
         </div>
         </div>
     </div>
+  </div>
+  <div class="footer">
+    <h4>MY Times   </h4>
+    <span><a href="#">World</a></span>
+    <span><a href="#">U.S</a></span>
+    <span><a href="#">Tech</a></span>
+    <span><a href="#">Science</a></span>
+<div class="copyright"&copy 2016, My Times (A Division of Codecademy bite)</p>
+</div>
   </div>
   </body>
 </html>
