--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -70,7 +71,6 @@
       </div>
 
       <div class="rightcolumn">
-        <div class="rightstyle">
         <div class="cookie">
           <img src="./resources/images/img-news-bite.png") alt="cookie">
         </div>
@@ -78,20 +78,18 @@
           <h4>NEWS BITES</h4>
         </div>
         <div class="newsbitelist">
-        <ul>
-          <li>Cat Emoji Goes Viral</li>
-          <li>Buy Youtube Views</li>
-          <li>Home Business Advertising Ideas</li>
-          <li>Advertising Internet Online</li>
-          <li>Illustration in Marketing Materials</li>
-          <li>Finally a Top Secret Way You Can</li>
-        </ul>
+          <span class="bite">Cat Emoji Goes Viral</span>
+          <span class="bite">Buy Youtube Views</span>
+          <span class="bite">Home Business Advertising Ideas</span>
+          <span class="bite">Advertising Internet Online</span>
+          <span class="bite">Illustration in Marketing Materials</span>
+          <span class="bite">Finally a Top Secret Way You Can</span>
         </div>
-        </div>
+
     </div>
   </div>
   <div class="footer">
-    <h4>MY Times   </h4>
+    <h5>MY Times   </h5>
     <span><a href="#">World</a></span>
     <span><a href="#">U.S</a></span>
     <span><a href="#">Tech</a></span>
